--- a/src/app/component/shop-page/shop-page.component.html
+++ b/src/app/component/shop-page/shop-page.component.html
@@ -1,15 +1,9 @@
 <p>
   <mat-toolbar color="primary">
-    <button mat-icon-button>
-      <mat-icon>menu</mat-icon>
-    </button>
     <span>Web Shop App</span>
     <span class="toolbar-spacer"></span>
-    <button mat-icon-button>
-      <mat-icon>favorite</mat-icon>
-    </button>
-    <button mat-icon-button>
-      <mat-icon>share</mat-icon>
+    <button mat-raised-button color="accent"
+            (click)="goToLoginPage()">Logowanie
     </button>
   </mat-toolbar>
 </p>
