--- a/src/app/component/login-page/login-page.component.html
+++ b/src/app/component/login-page/login-page.component.html
@@ -12,7 +12,7 @@
 
       <div class="buttons-container">
         <button mat-raised-button
-                color="primary"
+                color="accent"
                 type="submit">Zaloguj
         </button>
         <button mat-raised-button
