--- a/src/app/component/shop-page/product-list/product-list.component.html
+++ b/src/app/component/shop-page/product-list/product-list.component.html
@@ -1,1 +1,33 @@
-<p>product-list works!</p>
+<table mat-table [dataSource]="products" class="mat-elevation-z8">
+
+  <ng-container matColumnDef="image">
+    <th mat-header-cell *matHeaderCellDef></th>
+    <td mat-cell *matCellDef="let element">
+      <img src="assets/img/example.jpg" alt="placeholder">
+    </td>
+  </ng-container>
+
+  <ng-container matColumnDef="name">
+    <th mat-header-cell *matHeaderCellDef>Produkt</th>
+    <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="price">
+    <th mat-header-cell *matHeaderCellDef>Cena</th>
+    <td mat-cell *matCellDef="let element"> {{element.price | currency}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="action">
+    <th mat-header-cell *matHeaderCellDef></th>
+    <td mat-cell *matCellDef="let element">
+      <button mat-button color="primary">
+        <mat-icon>shopping_basket_outline</mat-icon>
+        Dodaj do koszyka
+      </button>
+    </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="columns"></tr>
+  <tr mat-row *matRowDef="let row; columns: columns;"
+      (click)="goToDetails(row)"></tr>
+</table>
