--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,5 +12,11 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 }
 
 .toolbar-spacer {
-    flex: 1 1 auto;
+  flex: 1 1 auto;
+}
+
+table {
+  width: 60%;
+  margin-left: auto;
+  margin-right: auto;
 }
