--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 @import "styles/index";
+@import "assets/feather-icons/feather.css";
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
@@ -15,8 +16,12 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   flex: 1 1 auto;
 }
 
-table {
+.mat-card {
   width: 60%;
   margin-left: auto;
   margin-right: auto;
+}
+
+[class^="feather-"], [class*=" feather-"] {
+  font-size: 1.6em;
 }
