added shopping cart service

--- a/src/app/component/shop-page/product-list/product-list.component.html
+++ b/src/app/component/shop-page/product-list/product-list.component.html
@@ -27,7 +27,8 @@
         <i class="feather-info"></i>
         Otwórz
       </button>
-      <button mat-raised-button color="accent">
+      <button mat-raised-button color="accent"
+              (click)="addToCart(element)">
         <i class="feather-plus-square"></i>
         Dodaj do koszyka
       </button>
