--- a/src/app/component/shop-page/product-list/product-list.component.html
+++ b/src/app/component/shop-page/product-list/product-list.component.html
@@ -1,3 +1,5 @@
+<app-search-panel></app-search-panel>
+
 <table mat-table [dataSource]="products" class="mat-elevation-z8">
 
   <ng-container matColumnDef="image">
