--- a/src/app/component/shop-page/shop-page.component.html
+++ b/src/app/component/shop-page/shop-page.component.html
@@ -25,4 +25,6 @@
     </button>
   </mat-toolbar>
 </p>
-<router-outlet></router-outlet>
+<div class="page-container">
+  <router-outlet></router-outlet>
+</div>
