--- a/src/styles/page/shop-page.style.scss
+++ b/src/styles/page/shop-page.style.scss
@@ -3,3 +3,15 @@
     margin-right: 20px;
   }
 }
+
+.search-panel {
+  margin-bottom: 30px;
+  border-radius: 0 !important;
+}
+
+.page-container {
+  width: 60%;
+  margin-left: auto;
+  margin-right: auto;
+  padding-bottom: 50px;
+}
