--- a/src/app/component/shop-page/shop-page.component.html
+++ b/src/app/component/shop-page/shop-page.component.html
@@ -5,7 +5,7 @@
     <button *ngIf="!isUserLogged"
             mat-raised-button
             color="accent"
-            (click)="goToLoginPage()">
+            (click)="goToShoppingList()">
       <i class="feather-shopping-cart"></i>
       Koszyk: {{numberOfProductsInCart}} produktów
     </button>
