--- a/src/app/component/shop-page/product-list/product-list.component.html
+++ b/src/app/component/shop-page/product-list/product-list.component.html
@@ -17,7 +17,7 @@
   <ng-container matColumnDef="price">
     <th mat-header-cell *matHeaderCellDef>Cena</th>
     <td mat-cell *matCellDef="let element"
-        class="price"> {{element.price | currency}} </td>
+        class="price"> {{element.price | currency:'PLN'}} </td>
   </ng-container>
 
   <ng-container matColumnDef="action">
@@ -29,11 +29,7 @@
         <i class="feather-info"></i>
         Otwórz
       </button>
-      <button mat-raised-button color="accent"
-              (click)="addToCart(element)">
-        <i class="feather-plus-square"></i>
-        Dodaj do koszyka
-      </button>
+      <app-add-product-button (addProduct)="addToCart(element, $event)"></app-add-product-button>
     </td>
   </ng-container>
 
