--- a/src/app/component/login-page/login-page.component.html
+++ b/src/app/component/login-page/login-page.component.html
@@ -8,6 +8,7 @@
       <app-form-input [fieldRef]="form.get('username')"
                       label="Nazwa użytkownika"></app-form-input>
       <app-form-input [fieldRef]="form.get('password')"
+                      [inputType]="InputType.PASSWORD"
                       label="Hasło"></app-form-input>
 
       <div class="buttons-container">
