--- a/src/app/component/shop-page/product-list/product-list.component.html
+++ b/src/app/component/shop-page/product-list/product-list.component.html
@@ -1,4 +1,4 @@
-<app-search-panel></app-search-panel>
+<app-search-panel (search)="search($event)"></app-search-panel>
 
 <table mat-table [dataSource]="products" class="mat-elevation-z8">
 
