--- a/src/styles/page/shop-page.style.scss
+++ b/src/styles/page/shop-page.style.scss
@@ -25,6 +25,17 @@ h1, h2, h3, h4, h5, h6 {
 .search-panel {
   margin-bottom: 30px;
   border-radius: 0 !important;
+
+  form {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+
+    & > * {
+      margin-right: 20px;
+      flex: 1;
+    }
+  }
 }
 
 .page-container {
