search panel refactor

--- a/src/app/component/_shared/add-product-button/add-product-button.component.html
+++ b/src/app/component/_shared/add-product-button/add-product-button.component.html
@@ -6,7 +6,7 @@
     <i class="feather-arrow-down-circle"></i>
   </button>
   <input matInput
-         type="text"
+         type="number"
          [(ngModel)]="count">
   <button mat-button
           class="icon-btn"
