--- a/src/app/component/shop-page/product-list/product-list.component.html
+++ b/src/app/component/shop-page/product-list/product-list.component.html
@@ -26,7 +26,7 @@
         class="row-action-container">
       <button mat-raised-button color="accent"
               (click)="goToDetails(element.id)">
-        <i class="feather-info"></i>
+        <i class="feather-arrow-up-right"></i>
         Otwórz
       </button>
       <app-add-product-button (addProduct)="addToCart(element, $event)"></app-add-product-button>
