--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,7 +2,10 @@
 @import "assets/feather-icons/feather.css";
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
 
 .centering {
   display: flex;
@@ -10,6 +13,10 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   align-items: center;
   flex-direction: column;
   height: 100%;
+}
+
+.bold {
+  font-weight: bold;
 }
 
 .toolbar-spacer {
