--- a/src/styles/page/shop-page.style.scss
+++ b/src/styles/page/shop-page.style.scss
@@ -36,6 +36,10 @@ h1, h2, h3, h4, h5, h6 {
       flex: 1;
     }
 
+    .search-btn-container {
+      margin-right: 5px;
+    }
+
     .mat-checkbox-layout {
       padding-top: 1em;
     }
