--- a/src/app/component/shop-page/product-list/product-list.component.html
+++ b/src/app/component/shop-page/product-list/product-list.component.html
@@ -5,7 +5,9 @@
   <ng-container matColumnDef="image">
     <th mat-header-cell *matHeaderCellDef>Sortuj według:</th>
     <td mat-cell *matCellDef="let element">
-      <img src="assets/img/example.jpg" alt="placeholder">
+      <img class="product-list-image"
+           src="assets/img/example.jpg"
+           alt="product-list-image">
     </td>
   </ng-container>
 
