--- a/src/styles.scss
+++ b/src/styles.scss
@@ -26,3 +26,17 @@ body {
 [class^="feather-"], [class*=" feather-"] {
   font-size: 1.6em;
 }
+
+// hide input number arrow buttons
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
