--- a/src/styles/table.style.scss
+++ b/src/styles/table.style.scss
@@ -36,6 +36,6 @@ table {
     width: 30px;
     text-align: center;
     font-size: 18px;
-    margin-right: -12px
+    //margin-right: -12px
   }
 }
