added users table and storing data in browser cache

--- a/src/app/component/shop-page/product-details/image-dialog/image-dialog.component.html
+++ b/src/app/component/shop-page/product-details/image-dialog/image-dialog.component.html
@@ -1,4 +1,4 @@
-<div mat-dialog-content>
+<div class="details-full-size-img" mat-dialog-content>
   <img [src]=imgRef
        alt="product-full-size">
 </div>
