--- a/src/app/component/shop-page/admin-page/users-page/users-page.component.html
+++ b/src/app/component/shop-page/admin-page/users-page/users-page.component.html
@@ -1,1 +1,53 @@
-<p>users-page works!</p>
+<h1><i class="feather-users"></i>Użytkownicy</h1>
+
+<div class="details-button-container">
+  <app-go-to-product-list></app-go-to-product-list>
+  <button mat-raised-button
+          color="accent"
+          (click)="addUser()">
+    <i class=" feather-user-plus"></i>
+    Nowy użytkownik
+  </button>
+</div>
+
+<h2 *ngIf="!users.length"
+    class="no-products-info">Brak użytkowników na liście</h2>
+
+<table *ngIf="users.length"
+       mat-table [dataSource]="users"
+       class="mat-elevation-z8">
+  <ng-container matColumnDef="nick">
+    <th mat-header-cell *matHeaderCellDef>Nazwa użytkownika</th>
+    <td mat-cell *matCellDef="let element">
+      {{element.username}}
+    </td>
+  </ng-container>
+
+  <ng-container matColumnDef="name">
+    <th mat-header-cell *matHeaderCellDef>Imię i nazwisko</th>
+    <td mat-cell *matCellDef="let element">
+      {{element.name + ' ' + element.surname}}
+    </td>
+  </ng-container>
+
+  <ng-container matColumnDef="createdAt">
+    <th mat-header-cell *matHeaderCellDef>Data utworzenia</th>
+    <td mat-cell *matCellDef="let element">
+      {{element.createdAt | date}}
+    </td>
+  </ng-container>
+
+  <ng-container matColumnDef="action">
+    <th mat-header-cell *matHeaderCellDef></th>
+    <td mat-cell *matCellDef="let element">
+      <button mat-button
+              color="accent"
+              (click)="deleteUser(element.product.id)">
+        <i class="feather-user-x"></i>Usuń
+      </button>
+    </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="columns"></tr>
+  <tr mat-row *matRowDef="let row; columns: columns;"></tr>
+</table>
