--- a/src/app/component/shop-page/product-details/product-details.component.html
+++ b/src/app/component/shop-page/product-details/product-details.component.html
@@ -21,7 +21,22 @@
     <h2>Opis produktu</h2>
     <p *ngIf="product.description">{{product.description}}</p>
     <p *ngIf="!product.description">Produkt nie posiada opisu.</p>
-    <h2>Detale</h2>
+
+    <h2>Informacje</h2>
+    <table *ngIf="product.properties.length"
+           mat-table [dataSource]="product.properties">
+      <ng-container matColumnDef="name">
+        <td class="bold upper" mat-cell *matCellDef="let element">
+          {{element.name}}
+        </td>
+      </ng-container>
+      <ng-container matColumnDef="value">
+        <td mat-cell *matCellDef="let element">
+          {{element.value}}
+        </td>
+      </ng-container>
+      <tr mat-row *matRowDef="let row; columns: ['name', 'value'];"></tr>
+    </table>
 
     <h2>Oceny i komentarze</h2>
   </mat-card-content>
