added comments and rating

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,7 @@
 @import "styles/index";
 @import "assets/feather-icons/feather.css";
+@import '~font-awesome/css/font-awesome.css';
+@import '~ngx-bar-rating/themes/br-fontawesome-o-theme';
 
 html, body { height: 100%; }
 body {
@@ -21,6 +23,10 @@ body {
 
 .upper {
   text-transform: uppercase;
+}
+
+.justify {
+  text-align: justify;
 }
 
 .toolbar-spacer {
