--- a/src/app/component/shop-page/product-details/product-details.component.html
+++ b/src/app/component/shop-page/product-details/product-details.component.html
@@ -19,7 +19,7 @@
       </div>
     </div>
     <h2>Opis produktu</h2>
-    <p *ngIf="product.description">{{product.description}}</p>
+    <p *ngIf="product.description" class="justify">{{product.description}}</p>
     <p *ngIf="!product.description">Produkt nie posiada opisu.</p>
 
     <h2>Informacje</h2>
@@ -38,6 +38,8 @@
       <tr mat-row *matRowDef="let row; columns: ['name', 'value'];"></tr>
     </table>
 
-    <h2>Oceny i komentarze</h2>
+    <h2>Oceny i Komentarze</h2>
+    <app-product-rating [comments]="product.comments"></app-product-rating>
+    <app-product-comments [comments]="product.comments"></app-product-comments>
   </mat-card-content>
 </mat-card>
