--- a/frontend/src/app/component/shop-page/admin-page/users-page/users-page.component.html
+++ b/frontend/src/app/component/shop-page/admin-page/users-page/users-page.component.html
@@ -4,7 +4,7 @@
   <app-go-to-product-list></app-go-to-product-list>
   <button mat-raised-button
           color="accent"
-          (click)="addUser()">
+          (click)="openAddUserDialog()">
     <i class=" feather-user-plus"></i>
     Nowy użytkownik
   </button>
@@ -27,6 +27,13 @@
     <th mat-header-cell *matHeaderCellDef>Imię i nazwisko</th>
     <td mat-cell *matCellDef="let element">
       {{element.name + ' ' + element.surname}}
+    </td>
+  </ng-container>
+
+  <ng-container matColumnDef="email">
+    <th mat-header-cell *matHeaderCellDef>Email</th>
+    <td mat-cell *matCellDef="let element">
+      {{element.email}}
     </td>
   </ng-container>
 
