--- a/frontend/src/app/component/_shared/form-input/form-input.component.html
+++ b/frontend/src/app/component/_shared/form-input/form-input.component.html
@@ -1,6 +1,9 @@
 <mat-form-field *ngIf="formFieldSupported(); else elseBlock"
                 class="form-field">
-  <mat-label>{{label}}</mat-label>
+  <mat-label>
+    {{label}}
+    <span *ngIf="isFieldRequired()">*</span>
+  </mat-label>
   <ng-container [ngSwitch]="inputType">
     <input *ngSwitchCase="InputType.TEXT"
            matInput
