--- a/frontend/src/app/component/shop-page/product-details/product-details.component.html
+++ b/frontend/src/app/component/shop-page/product-details/product-details.component.html
@@ -1,6 +1,7 @@
 <app-go-to-product-list></app-go-to-product-list>
 
-<mat-card *ngIf="product">
+<mat-card *ngIf="product"
+          class="product-page">
   <mat-card-content>
     <div class="details-title-section">
       <div class="img-container">
