product delivery form & refactor

--- a/frontend/src/app/component/_shared/field-errors/field-errors.component.html
+++ b/frontend/src/app/component/_shared/field-errors/field-errors.component.html
@@ -7,3 +7,9 @@
 <span *ngIf="fieldRef.hasError('email')">
   Niepoprawny adres email
 </span>
+<span *ngIf="fieldRef.hasError('phone')">
+  Numer telefonu ma niewłaściwy format
+</span>
+<span *ngIf="fieldRef.hasError('postalCode')">
+  Kod pocztowy ma niewłaściwy format
+</span>
