--- a/frontend/src/app/component/_shared/form-input/form-input.component.html
+++ b/frontend/src/app/component/_shared/form-input/form-input.component.html
@@ -24,7 +24,7 @@
            [formControl]="$any(fieldRef)">
     <mat-select *ngSwitchCase="InputType.DROPDOWN"
                 [formControl]="$any(fieldRef)"
-                multiple>
+                [multiple]="fieldConfig.multipleDropdown">
       <mat-select-trigger>
         {{getTriggerLabel()}}
       </mat-select-trigger>
