--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -34,7 +34,7 @@ body {
 }
 
 [class^="feather-"], [class*=" feather-"] {
-  font-size: 1.6em;
+  font-size: 1.6rem;
 }
 
 // hide input number arrow buttons
