--- a/frontend/src/app/component/shop-page/admin-page/users-page/add-user-dialog/add-user-dialog.component.html
+++ b/frontend/src/app/component/shop-page/admin-page/users-page/add-user-dialog/add-user-dialog.component.html
@@ -1,6 +1,6 @@
 <form [formGroup]="form"
       (ngSubmit)="addUser()">
-  <div class="add-comment-dialog">
+  <div class="form-dialog-container">
     <h2 mat-dialog-title>Utwórz nowego użytkownika</h2>
 
     <div mat-dialog-content>
