--- a/frontend/src/app/component/shop-page/shop-page.component.html
+++ b/frontend/src/app/component/shop-page/shop-page.component.html
@@ -1,6 +1,9 @@
 <p class="top-toolbar">
   <mat-toolbar color="primary">
-    <span>Web Shop App</span>
+    <span style="cursor: pointer"
+          (click)="goToProductList()">
+      <i class="feather-globe"></i> Web Shop App
+    </span>
     <span class="toolbar-spacer"></span>
     <button *ngIf="!isUserLogged"
             mat-raised-button
