--- a/frontend/src/styles/page/payment-page.style.scss
+++ b/frontend/src/styles/page/payment-page.style.scss
@@ -1,9 +1,40 @@
-.payment-button {
-  width: 100%;
-  display: flex;
-  justify-content: flex-end;
+@import "../variables.style";
 
-  button {
-    margin: 24px;
+.delivery-page {
+  max-width: 800px;
+  margin-left: auto;
+  margin-right: auto;
+
+  .delivery-icon {
+    position: relative;
+    float: right;
+
+    i {
+      font-size: 10rem;
+      color: $primaryColor;
+      margin: 4rem;
+      display: block;
+    }
+  }
+
+  .delivery-form {
+    margin-top: 2rem !important;
+    margin-left: 6rem;
+    display: flex;
+    flex-direction: column;
+
+    .mat-form-field-infix {
+      width: 280px;
+    }
+  }
+
+  .payment-button {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+
+    button {
+      margin: 24px 4rem;
+    }
   }
 }
