--- a/frontend/src/app/component/shop-page/product-list/product-list.component.html
+++ b/frontend/src/app/component/shop-page/product-list/product-list.component.html
@@ -23,15 +23,43 @@
   </ng-container>
 
   <ng-container matColumnDef="action">
-    <th mat-header-cell *matHeaderCellDef></th>
+    <th mat-header-cell *matHeaderCellDef>
+      <button *ngIf="isUserLoggedIn"
+              mat-button
+              color="accent"
+              class="add-product-button"
+              (click)="addNewProduct()">
+        <i class="feather-plus-square"></i>
+        Dodaj nowy produkt
+      </button>
+    </th>
     <td mat-cell *matCellDef="let element"
         class="row-action-container">
-      <button mat-raised-button color="accent"
-              (click)="goToDetails(element.id)">
-        <i class="feather-arrow-up-right"></i>
-        Otwórz
-      </button>
-      <app-add-product-button (addProduct)="addToCart(element, $event)"></app-add-product-button>
+      <ng-container *ngIf="isUserLoggedIn">
+        <button mat-button color="accent"
+                (click)="editProduct(element.id)">
+          <i class="feather-edit"></i>
+          Edytuj
+        </button>
+        <button mat-button color="accent"
+                (click)="editProduct(element.id)">
+          <i class="feather-chevrons-up"></i>
+          Aktualizuj ilość
+        </button>
+        <button mat-button color="warn"
+                (click)="deleteProduct(element.id)">
+          <i class="feather-x-square"></i>
+          Usuń
+        </button>
+      </ng-container>
+      <ng-container *ngIf="!isUserLoggedIn">
+        <button mat-raised-button color="accent"
+                (click)="goToDetails(element.id)">
+          <i class="feather-arrow-up-right"></i>
+          Otwórz
+        </button>
+        <app-add-product-button (addProductEvent)="addToCart(element, $event)"></app-add-product-button>
+      </ng-container>
     </td>
   </ng-container>
 
