--- a/frontend/src/app/component/shop-page/shopping-list/shopping-list.component.html
+++ b/frontend/src/app/component/shop-page/shopping-list/shopping-list.component.html
@@ -53,7 +53,7 @@
     <th mat-header-cell *matHeaderCellDef></th>
     <td mat-cell *matCellDef="let element">
       <button mat-button
-              color="accent"
+              color="warn"
               (click)="removeItem(element.product.id)">
         <i class="feather-x-square"></i>Usuń
       </button>
