--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,5 +1,6 @@
 @import "styles/index";
 @import "assets/feather-icons/feather.css";
+@import "styles/variables.style";
 @import '~font-awesome/css/font-awesome.css';
 @import '~ngx-bar-rating/themes/br-fontawesome-o-theme';
 
@@ -23,6 +24,10 @@ body {
 
 .upper {
   text-transform: uppercase;
+}
+
+.primary-color {
+  color: $primaryColor;
 }
 
 .justify {
