--- a/frontend/src/app/component/shop-page/admin-page/order-list/order-list.component.html
+++ b/frontend/src/app/component/shop-page/admin-page/order-list/order-list.component.html
@@ -1,1 +1,22 @@
-<p>order-list works!</p>
+<h1><i class="feather-package"></i>Zamówienia</h1>
+
+<div class="details-button-container">
+  <app-go-to-product-list></app-go-to-product-list>
+</div>
+
+<h2 *ngIf="!orders.length"
+    class="no-products-info">Brak zamówień w systemie</h2>
+
+<table *ngIf="orders.length"
+       mat-table [dataSource]="orders"
+       class="mat-elevation-z8">
+  <ng-container matColumnDef="orderNo">
+    <th mat-header-cell *matHeaderCellDef>Numer zamówienia</th>
+    <td mat-cell *matCellDef="let element">
+      #{{element.orderNo}}
+    </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="columns"></tr>
+  <tr mat-row *matRowDef="let row; columns: columns;"></tr>
+</table>
