--- a/frontend/src/styles/page/_index.scss
+++ b/frontend/src/styles/page/_index.scss
@@ -1,3 +1,4 @@
+@import "add-product-page.style";
 @import "login-page.style";
 @import "payment-page.style";
 @import "product-details-page.style";
